--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,18 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="main_orange">#ff7043</color>
+    <color name="gray_text">#9e9e9e</color>
+    <color name="dark_blue_main">#263238</color>
+    <color name="info_background_color">#263238</color>
+    <color name="yellow_btn">#FFB300</color>
+    <color name="red_delete_button">#FF1744</color>
+    <color name="blue_edit_button">#651FFF</color>
+    <color name="toolbar_color">#263238</color>
+    <color name="light_white">#f5f5f5</color>
+    <color name="gray_2">#bdbdbd</color>
+    <color name="gray_3">#424242</color>
+    <color name="gray_4">#e0e0e0</color>
+    <color name="red_2">#d50000</color>
+
 </resources>
